--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jesus Contreras | Video Editor & Engineer</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css?v=4">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -20,35 +20,105 @@
 
     <section class="portfolio">
         <div class="container">
-            <h2>Featured Projects</h2>
             
-            <div class="grid">
+            <h2>Featured Projects</h2>
+
+            <div class="grid-vertical">
                 
                 <div class="card">
-                    <div class="video-wrapper">
-                       <iframe width="560" height="315" src="https://www.youtube.com/embed/np21dkKjMgY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="video-wrapper-vertical">
+                        <iframe src="https://www.youtube.com/embed/1X3r7UC7Rq0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
-                    <h3>Nissan / CarVision Ads</h3>
-                    <p>Commercial editing, color grading, and brand identity compliance for US Market.</p>
+                    <div class="card-content">
+                        <h3>Automotive Commercial | Nissan</h3>
+                        <p>Professional high-end editing for US automotive market. Advanced motion tracking and brand identity compliance.</p>
+                    </div>
                 </div>
 
                 <div class="card">
-                    <div class="video-wrapper">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/TU_ID_VIDEO_AQUI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="video-wrapper-vertical">
+                        <iframe src="https://www.youtube.com/embed/V1A7tbNUc0o" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
-                    <h3>High-Retention Social Clips</h3>
-                    <p>Dynamic subtitles, SFX, and motion graphics designed for TikTok/Reels algorithms.</p>
+                    <div class="card-content">
+                        <h3>Data-Driven Retail Sales</h3>
+                        <p>Engineered high-conversion video ads utilizing motion graphics and urgency triggers.</p>
+                    </div>
                 </div>
 
                 <div class="card">
-                    <div class="video-wrapper">
-                         <div class="placeholder">Coming Soon</div>
+                    <div class="video-wrapper-vertical">
+                        <iframe src="https://www.youtube.com/embed/mLrKEyQK5nI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
-                    <h3>Technical Workflows</h3>
-                    <p>Optimized rendering pipelines and asset management.</p>
+                    <div class="card-content">
+                        <h3>Premium Luxury Storytelling</h3>
+                        <p>Specialized post-production for premium segments. Elegant motion overlays and night-shot optimization.</p>
+                    </div>
                 </div>
 
+                <div class="card">
+                    <div class="video-wrapper-vertical">
+                        <iframe src="https://www.youtube.com/embed/enSI1f3YT-8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div class="card-content">
+                        <h3>Seasonal 3D Integration</h3>
+                        <p>Integrated creative storytelling with 3D character animation for high-volume holiday periods.</p>
+                    </div>
+                </div>
+
+            </div> <div class="grid-vertical">
+
+                <div class="card">
+                    <div class="video-wrapper-vertical">
+                        <iframe src="https://www.youtube.com/embed/ei6CnYiQdwM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div class="card-content">
+                        <h3>Cinematic Branding Promo</h3>
+                        <p>High-impact promotional content designed to elevate brand positioning with cinematic color grading.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="video-wrapper-vertical">
+                        <iframe src="https://www.youtube.com/embed/np21dkKjMgY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div class="card-content">
+                        <h3>High-Retention Strategy</h3>
+                        <p>Fast-paced editing optimized for maximum watch time using memes and dynamic hooks.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="video-wrapper-vertical">
+                        <iframe src="https://www.youtube.com/embed/DOADJU8uMWc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div class="card-content">
+                        <h3>Creative Trend Marketing</h3>
+                        <p>Strategic use of viral trends, green screen, and SFX for impactful social advertising.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="video-wrapper-vertical">
+                        <iframe src="https://www.youtube.com/embed/xf18OHZJUx0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div class="card-content">
+                        <h3>Dynamic Visual Syncing</h3>
+                        <p>Expert-level rhythmic editing and beat-syncing designed for niche fandom communities.</p>
+                    </div>
+                </div>
+
+            </div> <div class="horizontal-section">
+                <div class="card">
+                    <div class="video-wrapper-horizontal">
+                        <iframe src="https://www.youtube.com/embed/tFTaf0sRv8g" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div class="card-content">
+                        <h3>Multifaceted Business Solutions</h3>
+                        <p>Versatile editing for diverse sectors. Focused on clear messaging, professional overlays, and strategic calls to action (CTA).</p>
+                    </div>
+                </div>
             </div>
+
         </div>
     </section>
 
@@ -57,6 +127,4 @@
     </footer>
 
 </body>
-
 </html>
-
