--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                         <iframe src="https://www.youtube.com/embed/enSI1f3YT-8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="card-content">
-                        <h3>Seasonal 3D Integration</h3>
-                        <p>Integrated creative storytelling with 3D character animation for high-volume holiday periods.</p>
+                        <h3>High-Retention Strategy</h3>
+                        <p>Integrated creative storytelling for any event, campaign, or personal brand.</p>
                     </div>
                 </div>
 
@@ -82,8 +82,8 @@
                         <iframe src="https://www.youtube.com/embed/np21dkKjMgY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="card-content">
-                        <h3>High-Retention Strategy</h3>
-                        <p>Fast-paced editing optimized for maximum watch time using memes and dynamic hooks.</p>
+                        <h3>Advanced 3D animations</h3>
+                        <p>Fast-paced 3D animation editing optimized for maximum viewing time using memes and dynamic hooks.</p>
                     </div>
                 </div>
 
@@ -128,3 +128,4 @@
 
 </body>
 </html>
+
