--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jesus Contreras | Video Editor & Engineer</title>
-    <link rel="stylesheet" href="style.css?v=4">
+    <link rel="stylesheet" href="style.css?v=5">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -27,7 +27,7 @@
                 
                 <div class="card">
                     <div class="video-wrapper-vertical">
-                        <iframe src="https://www.youtube.com/embed/1X3r7UC7Rq0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/1X3r7UC7Rq0" title="Automotive Commercial Nissan" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="card-content">
                         <h3>Automotive Commercial | Nissan</h3>
@@ -37,7 +37,7 @@
 
                 <div class="card">
                     <div class="video-wrapper-vertical">
-                        <iframe src="https://www.youtube.com/embed/V1A7tbNUc0o" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/V1A7tbNUc0o" title="Data Driven Retail Sales" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="card-content">
                         <h3>Data-Driven Retail Sales</h3>
@@ -47,7 +47,7 @@
 
                 <div class="card">
                     <div class="video-wrapper-vertical">
-                        <iframe src="https://www.youtube.com/embed/mLrKEyQK5nI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/mLrKEyQK5nI" title="Premium Luxury Storytelling" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="card-content">
                         <h3>Premium Luxury Storytelling</h3>
@@ -57,7 +57,7 @@
 
                 <div class="card">
                     <div class="video-wrapper-vertical">
-                        <iframe src="https://www.youtube.com/embed/enSI1f3YT-8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/enSI1f3YT-8" title="High Retention Strategy" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="card-content">
                         <h3>High-Retention Strategy</h3>
@@ -65,11 +65,9 @@
                     </div>
                 </div>
 
-            </div> <div class="grid-vertical">
-
                 <div class="card">
                     <div class="video-wrapper-vertical">
-                        <iframe src="https://www.youtube.com/embed/ei6CnYiQdwM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/ei6CnYiQdwM" title="Cinematic Branding Promo" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="card-content">
                         <h3>Cinematic Branding Promo</h3>
@@ -79,7 +77,7 @@
 
                 <div class="card">
                     <div class="video-wrapper-vertical">
-                        <iframe src="https://www.youtube.com/embed/np21dkKjMgY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/np21dkKjMgY" title="Advanced 3D Animations" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="card-content">
                         <h3>Advanced 3D animations</h3>
@@ -89,7 +87,7 @@
 
                 <div class="card">
                     <div class="video-wrapper-vertical">
-                        <iframe src="https://www.youtube.com/embed/DOADJU8uMWc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/DOADJU8uMWc" title="Creative Trend Marketing" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="card-content">
                         <h3>Creative Trend Marketing</h3>
@@ -98,7 +96,7 @@
                 </div>
 
                 <div class="card">
-                    <a href="https://www.youtube.com/shorts/xf18OHZJUx0" target="_blank" style="text-decoration: none; color: inherit;">
+                    <a href="https://www.youtube.com/shorts/xf18OHZJUx0" target="_blank" style="text-decoration: none; color: inherit; display: block; height: 100%;">
                         <div class="video-wrapper-vertical">
                             <img src="https://img.youtube.com/vi/xf18OHZJUx0/hqdefault.jpg" alt="Naruto Edit" style="width: 100%; height: 100%; object-fit: cover; opacity: 0.8;">
                             
@@ -116,7 +114,7 @@
             </div> <div class="horizontal-section">
                 <div class="card">
                     <div class="video-wrapper-horizontal">
-                        <iframe src="https://www.youtube.com/embed/tFTaf0sRv8g" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/tFTaf0sRv8g" title="Multifaceted Business Solutions" loading="lazy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="card-content">
                         <h3>Multifaceted Business Solutions</h3>
@@ -134,5 +132,3 @@
 
 </body>
 </html>
-
-
