--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </div>
                     <div class="card-content">
                         <h3>Luxury Real Estate Tour | 980m²</h3>
-                        <p>Producción inmobiliaria de alto perfil. Enfoque en iluminación natural, corrección de color cinemática y edición rítmica para retención de audiencia.</p>
+                        <p>High-profile real estate production. Focus on natural lighting, cinematic color correction, and rhythmic editing for audience retention.</p>
                     </div>
                 </div>
 
@@ -180,6 +180,7 @@
 
 </body>
 </html>
+
 
 
 
